Last fixes to make the project compile